# stk-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  bm_find_min_max.cpp  bm_normalize.cpp  test_data.cpp
src/gpu/: find_min_max.cu  find_min_max.h
